Práctica 5 terminada y depurada. Civitas acabado completamente con interfaz gráfica incluida y listo para jugar. Prácticas de PDOO terminadas.

--- a/Civitas/src/GUI/CasillaPanel.form
+++ b/Civitas/src/GUI/CasillaPanel.form
@@ -19,29 +19,33 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="nombreEtiq" min="-2" max="-2" attributes="0"/>
-                  <Component id="compraEtiq" min="-2" max="-2" attributes="0"/>
-                  <Component id="edificarEtiq" min="-2" max="-2" attributes="0"/>
-                  <Component id="alquilerEtiq" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="tituloPanel" min="-2" max="-2" attributes="0"/>
-                  <Component id="nombreTex" min="-2" max="-2" attributes="0"/>
-                  <Component id="compraTex" min="-2" max="-2" attributes="0"/>
-                  <Component id="edificarTex" min="-2" max="-2" attributes="0"/>
-                  <Component id="alquilerTex" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="nombreEtiq" min="-2" max="-2" attributes="0"/>
+                          <Component id="compraEtiq" min="-2" max="-2" attributes="0"/>
+                          <Component id="edificarEtiq" min="-2" max="-2" attributes="0"/>
+                          <Component id="alquilerEtiq" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="nombreTex" min="-2" max="-2" attributes="0"/>
+                          <Component id="compraTex" min="-2" max="-2" attributes="0"/>
+                          <Component id="edificarTex" min="-2" max="-2" attributes="0"/>
+                          <Component id="alquilerTex" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
               </Group>
-              <EmptySpace pref="132" max="32767" attributes="0"/>
+              <EmptySpace pref="163" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
               <Component id="tituloPanel" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="3" attributes="0">
